--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "bpsim-online",
   "version": "0.1.0",
   "private": true,
+  "resolutions": {
+    "//": "See https://github.com/facebook/create-react-app/issues/11773",
+    "react-error-overlay": "6.0.9"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
